k8s/overlays/prod/prod-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: kustomize.3cd80d1a9ec844598ced.westus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: todo
          servicePort: 3000
        path: /
